// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthLink renders Log in link when authStatus is configuring 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-account__login"
    data-testid="login-link"
  >
    <a
      class="nhsuk-account__login--link"
      href="/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="login-link"
    >
      Log in
    </a>
  </div>
</DocumentFragment>
`;

exports[`AuthLink renders Log in link when authStatus is unauthenticated 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-account__login"
    data-testid="login-link"
  >
    <a
      class="nhsuk-account__login--link"
      href="/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="login-link"
    >
      Log in
    </a>
  </div>
</DocumentFragment>
`;

exports[`AuthLink renders Log out link when authStatus is authenticated 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-account__login"
    data-testid="login-link"
  >
    <a
      class="nhsuk-account__login--link"
      href="/auth/signout"
      id="logout-link"
    >
      Log out
    </a>
  </div>
</DocumentFragment>
`;
